@@ -28,7 +28,7 @@ no_index:
 requires:
   Class::Utils: 0.03
   Error::Pure: 0
-  List::MoreUtils: 0
+  List::Util: 1.33
   Readonly: 0
   Unicode::UTF8: 0
   perl: 5.6.2
